Successfully added title to modal window

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
     <!-- Edit Task Modal: Form for editing an existing task's details. -->
     <div class="edit-task-modal-window">
         <form id="edit-task-form">
-            <h4 class="edit-task-modal-window">Edit Task</h4>
             <div class="edit-task-div" id="edit-task-header">
+                <h4 class="modal-title">Edit Task</h4> <!-- Header outside of any divs -->
                 <input type="text" id="edit-task-title-input" class="task-title-input" placeholder="Task Title">
                 <button id="edit-btn" class="edit-btn"></button>
             </div>
@@ -144,6 +144,7 @@
             </div>
         </form>
     </div>
+    
 
 
     <div id="filterDiv"></div>
