--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
     <nav class="side-bar" id="side-bar-div">
         <div id="side-logo-div">
-            <img id="logo" src="./assets/logo-dark.svg" alt="logo-dark">
+            <img id="logo" src="./assets/logo-light.svg" alt="logo-dark">
         </div>
 
         <div class="boards-nav-links-div" id="boards-nav-links-div">
