The console logs the info successfully

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
     <nav class="side-bar" id="side-bar-div">
         <div id="side-logo-div">
-            <img id="logo" src="./assets/logo-light.svg" alt="logo-dark">
+            <img id="logo" src="./assets/logo-dark.svg" alt="logo-dark">
         </div>
 
         <div class="boards-nav-links-div" id="boards-nav-links-div">
@@ -150,7 +150,7 @@
     <div id="filterDiv"></div>
 
     <!-- JavaScript Import -->
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./index.js" defer></script>
 </body>
 
 </html>
